fixed paragraph size on mobile

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -12,6 +12,9 @@
 
 .paragraph--normal {
   font-size: $text-medium;
+  @include respond(phone) {
+    font-size: $text-large;
+  }
 }
 
 .paragraph--small {
